crates/mys-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/mys-swarm-config/tests/snapshot_tests.rs
expression: genesis.mys_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 74
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        mys_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0xfe7b3ad4cf40d0bef96ab57c6fc5a60a0777914b6186e1aad1beede450702866"
          size: 0
      voting_power: 10000
      operation_cap_id: "0xfd13e26f50184dcb060d024e7ab2cddcfc23ffdee607224921d77006fc95c55e"
      gas_price: 1000
      staking_pool:
        id: "0xf0a0df43219c3e825282327ddca6ec905a12f4ffd75c8db9baad0a80e8b17d3a"
        activation_epoch: 0
        deactivation_epoch: ~
        mys_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0x8b38e000efe36d838831ddacda9904dbc6361d89e02aa7c0936cb2342bf97704"
          size: 1
        pending_stake: 0
        pending_total_mys_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x279b388500ca30943d43bc6c8e914c6f410e5a0ae920ba70565179335488ddf5"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0xeb0cd40dfdf7bfc1de4365359b65165ed1df6aba3af89581125ff3d15ed21a54"
        size: 0
  pending_active_validators:
    contents:
      id: "0xe8dfa5f9ccb0f25260e7170aee269dee7c4920bf9185eb23d9d8055c3dd83eed"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xdda37dedec3f820ab1e5397f153e1eb8bdd1266135f81747498f1226c54a2cd5"
    size: 1
  inactive_validators:
    id: "0xbe6cd64db737d2a1782ee9a463a592a10b24468749e08ddfb9416d80231c6be0"
    size: 0
  validator_candidates:
    id: "0x0021ae85c85b81ab7314778982ff55eac8e29c3053cf704956480178e35f904d"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0x5f83cab3208ad25ba3e8e209dfd215050ba34e7b799b570d8bc585641636bb86"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0x1755cfba04fc9a2b070c99fc956aa15406959d5f0bad6e669aa2c87eb59f9157"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  extra_fields:
    id:
      id: "0x959b8c63e82cea9bfc684299e32ce297d56921978ea964114d04cde0f044e506"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x2a2e1ced4667d2cc74dddef0a4121e39fce56bba78825af286a33e0eed759a59"
  size: 0
